crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@69.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT functest_S_1('abcd', '2020-01-01');"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    FuncCall@7..40
      Ident@7..19 "functest_S_1"
      Ascii40@19..20 "("
      AConst@20..26
        Sconst@20..26 "'abcd'"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..40
        Sconst@28..40 "'2020-01-01'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

