crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@70.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT functest_S_2(ARRAY['1', '2', '3']);"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..19 "functest_S_2"
      Ascii40@19..20 "("
      AArrayExpr@20..39
        Array@20..25 "ARRAY"
        Ascii91@25..26 "["
        AConst@26..29
          Sconst@26..29 "'1'"
        Ascii44@29..30 ","
        Whitespace@30..31 " "
        AConst@31..34
          Sconst@31..34 "'2'"
        Ascii44@34..35 ","
        Whitespace@35..36 " "
        AConst@36..39
          Sconst@36..39 "'3'"
  Ascii93@39..40 "]"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

