crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@71.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT functest_S_3();
---
SelectStmt@0..22
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..19
    FuncCall@7..19
      Ident@7..19 "functest_S_3"
  Ascii40@19..20 "("
  Ascii41@20..21 ")"
  Ascii59@21..22 ";"

