crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@72.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT functest_S_10('abcd', '2020-01-01');"
---
SelectStmt@0..43
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..41
    FuncCall@7..41
      Ident@7..20 "functest_S_10"
      Ascii40@20..21 "("
      AConst@21..27
        Sconst@21..27 "'abcd'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..41
        Sconst@29..41 "'2020-01-01'"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

