crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@73.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT functest_S_13();
---
SelectStmt@0..23
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..20
    FuncCall@7..20
      Ident@7..20 "functest_S_13"
  Ascii40@20..21 "("
  Ascii41@21..22 ")"
  Ascii59@22..23 ";"

